<resources>
    <string name="app_name">SignIn SignOut</string>
    <string name="email">Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="se_connecter">Se connecter</string>
    <string name="cr_er_un_compte">Créer un compte</string>
    <string name="mettre_jour">Mettre à jour</string>
    <string name="nom">Nom</string>
    <string name="age">Âge</string>
    <string name="se_d_connecter">Se déconnecter</string>
    <string name="appareil_photo">Appareil photo</string>
    <string name="galerie">Galerie</string>
    <string name="error_fields">Please fill all fields.</string>
    <string name="select_photo">Sélectionner une photo</string>
    <string name="photo_loaded">Photo loaded</string>
</resources>
